# serializer version: 1
# name: test_get_series_urls_all
  list([
    'https://archiveofourown.org/series/2065602',
    'https://archiveofourown.org/series/3738976',
    'https://archiveofourown.org/series/2627935',
    'https://archiveofourown.org/series/3108957',
    'https://archiveofourown.org/series/3078150',
    'https://archiveofourown.org/series/3078153',
    'https://archiveofourown.org/series/3196530',
    'https://archiveofourown.org/series/2643097',
  ])
# ---
# name: test_get_series_urls_bookmarks
  list([
    'https://archiveofourown.org/series/2065602',
    'https://archiveofourown.org/series/3738976',
  ])
# ---
# name: test_get_title
  list([
    "id:12345678 title:so I open the window to hear sounds of people author:oriflamme fandom:The Locked Tomb Series | Gideon the Ninth Series - Tamsyn Muir pairing: rating:Teen And Up Audiences warning:No Archive Warnings Apply category:Gen words:5688 chapters:1 language:English published:2022-09-20 updated: series_title:it's about the bones 👌 series_index:3",
  ])
# ---
# name: test_get_title_multiple_series
  list([
    'AO3 Skins, :has() selector 1, 1 Fandom - Fandom, AO3, No Fandom',
  ])
# ---
# name: test_get_work_urls
  list([
    'https://archiveofourown.org/works/34816549',
    'https://archiveofourown.org/works/35778589',
    'https://archiveofourown.org/works/41655369',
    'https://archiveofourown.org/works/34763164',
    'https://archiveofourown.org/works/41214669',
    'https://archiveofourown.org/works/41822007',
    'https://archiveofourown.org/works/342122',
    'https://archiveofourown.org/works/26958667',
    'https://archiveofourown.org/works/33658237',
    'https://archiveofourown.org/works/36398359',
    'https://archiveofourown.org/works/34702543',
    'https://archiveofourown.org/works/35369560',
    'https://archiveofourown.org/works/18623245',
    'https://archiveofourown.org/works/34348333',
    'https://archiveofourown.org/works/28032981',
    'https://archiveofourown.org/works/24412372',
    'https://archiveofourown.org/works/557020',
    'https://archiveofourown.org/works/28968675',
  ])
# ---
